--- a/repositorio/logos/logos.html
+++ b/repositorio/logos/logos.html
@@ -86,6 +86,7 @@
         <ul>
            
              <li><img src="imgs/athletum-logo.png" alt="logo"></li>
+             <li><img src="imgs/login-triangulo.png" alt="logo"></li>
         </ul>
     </div>
 </body>
